--- a/scss/pc/main.scss
+++ b/scss/pc/main.scss
@@ -278,7 +278,7 @@
 				}
 				.filter-type {
 					position: absolute;
-					padding: 0px 60px;
+					padding: 10px 60px;
 					width: 370px;
 					min-height: 120px;
 					height: auto;
@@ -307,13 +307,14 @@
 							width: 60px;
 							height: 50px;
 							border-radius: 15px;
+							margin-bottom: 5px;
 							cursor: pointer;
 						}
 						span {
 							margin-left: 22px;
 							color: #181a20;
 							font-family: $font;
-							font-size: 20px;
+							font-size: 18px;
 							font-style: normal;
 							font-weight: 400;
 							line-height: 46px;
@@ -327,10 +328,10 @@
 				}
 				.filter-colors {
 					position: absolute;
-					padding: 0px 60px;
+					padding: 30px 38px 30px 40px;
 					width: 370px;
 					min-height: 120px;
-					height: 380px;
+					height: 300px;
 					top: 120px;
 					left: 300px;
 					line-height: 46px;
@@ -348,6 +349,12 @@
 						visibility: visible;
 						transition: 0.2s ease-out;
 						background: #eaeaea;
+					}
+					img {
+						display: flex;
+						width: 70px;
+						height: 60px;
+						border: 1px solid #000;
 					}
 					div {
 						width: 295px;
