--- a/scss/pc/homepage/homepage.scss
+++ b/scss/pc/homepage/homepage.scss
@@ -231,6 +231,7 @@
 								div {
 									display: flex;
 									flex-direction: row;
+
 									img {
 										margin-right: 5px;
 										width: 17px;
@@ -426,6 +427,7 @@
 								display: flex;
 								flex-direction: row;
 								justify-content: space-between;
+
 								div {
 									display: flex;
 									flex-direction: row;
@@ -610,6 +612,10 @@
 								div {
 									display: flex;
 									flex-direction: row;
+									.mob {
+										width: 7px;
+										height: 7px;
+									}
 									img {
 										margin-right: 5px;
 										width: 17px;
